--- a/WEBSITE/templates/layout.html
+++ b/WEBSITE/templates/layout.html
@@ -10,8 +10,8 @@
     <body>
         <div class="navbar">
             <a href="{{ url_for('home') }}" class="navbar-brand">Home</a>
-            <a href="{{ url_for('home') }}" class="navbar-item">About</a>
-            <a href="{{ url_for('home') }}" class="navbar-item">Contact</a>
+            <a href="{{ url_for('about') }}" class="navbar-item">About</a>
+            <a href="{{ url_for('contact') }}" class="navbar-item">Contact</a>
         </div>
 
         <div class="content">
