looking better, and trying to add a clock on the navbar

--- a/WEBSITE/templates/about.html
+++ b/WEBSITE/templates/about.html
@@ -1,7 +1,18 @@
 {% extends "layout.html" %}
 {% block title %}
-About me Page
+About me
 {% endblock %}
 {% block content %}
-This is the About me Page!
+<div class="container" id="hero">
+    <h1 class="hero-text">Nikodem Skrzypczak</h1>
+</div>
+<div class="container container-col">
+    <div class="col50" style="background-color:brown;">
+        <p id="datetime" style="color:black;font-size:12;"> </p></div>
+    <div class="col50" style="background-color:green;"></div>
+</div>
+<div class="container container-col">
+    <div class="col50" style="background-color:yellow;"></div>
+    <div class="col50" style="background-color:grey;"></div>
+</div>
 {% endblock %}
