--- a/WEBSITE/templates/home.html
+++ b/WEBSITE/templates/home.html
@@ -3,5 +3,7 @@
 Home Page
 {% endblock %}
 {% block content %}
-This is the Home Page!
+<div class="container" id="hero">
+    <h1 class="hero-text">WKSP.ONLINE</h1>
+</div>
 {% endblock %}
